Fixed header overflow from width 100% and padding

--- a/master.css
+++ b/master.css
@@ -19,7 +19,6 @@ body
 */
 .header
 {
-	width: 100%;
 	height: 48px;
 	padding: 8px;
 	border: 0px;
